--- a/css/style.css
+++ b/css/style.css
@@ -5,12 +5,13 @@
     background-image: url('../img/Untitled.png');
     background-size: cover;
     background-repeat: no-repeat;
-    height: 80vh;
+    height: 90vh;
     width: 100%;
-    margin-top: 5px;
+    margin-top: 15px;
 }
 .menu-link {
     list-style-type: none;
+    line-height: 3;
 }
 .slider-link {
     margin-bottom: 15px;
@@ -47,4 +48,27 @@
 }
 .menu-list {
     z-index: 1;
+}
+.slider-link img {
+    height: 3rem;
+  }
+  .btn-buy {
+    border: 1px solid #eee;
+    border-radius: 20px;
+    background-color: transparent;
+    color: white;
+    margin: auto;
+   width: 10rem;
+ }
+ .carousel-control-prev-icon {
+    background-image: url(data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23fff'%3e%3cpath d='M11.354 1.646a.5.5 0 0 1 0 .708L5.707 8l5.647 5.646a.5.5 0 0 1-.708.708l-6-6a.5.5 0 0 1 0-.708l6-6a.5.5 0 0 1 .708 0z'/%3e%3c/svg%3e);
+    border: 1px solid white;
+    border-radius: 50%;
+    background-size: 100%;
+}
+.carousel-control-next-icon {
+    background-image: url(data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23fff'%3e%3cpath d='M11.354 1.646a.5.5 0 0 1 0 .708L5.707 8l5.647 5.646a.5.5 0 0 1-.708.708l-6-6a.5.5 0 0 1 0-.708l6-6a.5.5 0 0 1 .708 0z'/%3e%3c/svg%3e);
+    border: 1px solid white;
+    border-radius: 50%;
+    background-size: 100%;
 }
