--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@
     background-image: url('../img/Untitled.png');
     background-size: cover;
     background-repeat: no-repeat;
-    height: 90vh;
+    height: 100vh;
     width: 100%;
     margin-top: 15px;
 }
@@ -87,4 +87,34 @@
     border: 1px solid white;
     border-radius: 50%;
     background-size: 100%;
+}
+.main-line {
+    border-top: 1px solid #47093E;
+    border-bottom: 1px solid #47093E;
+    font-size: 25px;
+    margin-bottom: 5px;
+    align-items: center;
+    text-align: center;
+}
+.complex li {
+list-style-type: none;
+text-align: left;
+
+}
+.link-complex {
+    color: #590D56;
+}
+.text-complex {
+    font-size: 20px;
+}
+.production {
+    background-image: url('../img/Vector\ 2.png');
+    background-size: contain;
+    background-repeat: no-repeat;
+    height: 150vh;
+    width: 100%;
+}
+.main-production {
+    margin-top: 50vh;
+    width: 100%;
 }
