--- a/css/style.css
+++ b/css/style.css
@@ -97,11 +97,12 @@
     text-align: center;
     font-weight: 300;
 }
-.complex li {
-list-style-type: none;
-text-align: left;
 
+.complex {
+    width: 100%;
+    height: 100%;
 }
+
 .link-complex {
     color: #590D56;
 }
@@ -122,4 +123,28 @@ text-align: left;
 .circle {
     height: 9rem;
    
+}
+.circle-min img {
+    height: 3rem;
+}
+.circle-min {
+    font-size: 15px;
+    font-weight: 500;
+}
+.square img {
+    height: 3rem;
+}
+.square p {
+    font-size: 15px;
+    font-weight: 500;
+}
+.tabs img {
+    height: 3rem;
+}
+.tabs p {
+    font-size: 15px;
+    font-weight: 500;
+}
+.circle-i {
+height: 10px;
 }
