--- a/css/style.css
+++ b/css/style.css
@@ -163,7 +163,7 @@ height: 10px;
     background-image: url(../img/Vector\ 8.png);
     background-repeat: no-repeat;
     background-size: cover;
-    height: 125vh;
+    height: 127vh;
     width: 100%;
 }
 .info-text {
@@ -179,11 +179,52 @@ height: 10px;
 .wrapper-content-img img {
     width: 635px;
     height: 170px;
-    margin-top: ;
 }
 .btn-info-buy {
    border-color: #47093E;
    border-radius: 20px;
    width: 10%;
    margin-right: 10%;
+   background-color: transparent;
+}
+.buttons {
+    margin-right: 149px;
+}
+.apteka {
+    border: 1px solid #47093E;
+    border-radius: 20px;
+    border-color: #47093E;
+    background-color: transparent;
+    width: 9rem;
+    height: 2rem;
+}
+.three-hundred {
+    border: 1px solid #47093E;
+    border-radius: 20px;
+    border-color: #47093E;
+    background-color: transparent;
+    width: 9rem;
+    height: 2rem;
+}
+.stolichki {
+    border: 1px solid #47093E;
+    border-radius: 20px;
+    border-color: #47093E;
+    background-color: transparent;
+    width: 9rem;
+    height: 2rem;
+}
+.stolichki:hover {
+background-color: #47093E;
+color: #E5E5E5;
+}
+.footer{
+    box-shadow: 9px -7px 60px 13px #47093E;
+    width: 100%;
+}
+.head-footer h1 {
+    width: 31px;
+}
+.footer-social img {
+color: #7A7A7A;
 }
