--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,6 @@
+* {
+    box-sizing: border-box;
+}
 .frame {
     height: 1.5rem;
 }
@@ -68,6 +71,15 @@
 .slider-link img {
     height: 3rem;
   }
+  .link-zavod {
+    width: 500px;
+    height: 500px;
+    position: relative;
+    overflow: hidden;
+}
+.link-zavod:hover .pictures {
+transform: scale(1.10);
+}
   .btn-buy {
     border: 1px solid #eee;
     border-radius: 20px;
