--- a/css/style.css
+++ b/css/style.css
@@ -37,6 +37,7 @@
     background: url('../img/Vector\ 1.png');
     background-size: cover;
     background-repeat: no-repeat;
+    height: 810px;
 }
 
 .btn-round {
@@ -77,9 +78,6 @@
     height: 500px;
     position: relative;
     overflow: hidden;
-}
-.link-zavod:hover .pictures {
-transform: scale(1.10);
 }
   .btn-buy {
     border: 1px solid #eee;
@@ -129,10 +127,7 @@ transform: scale(1.10);
     height: 150vh;
     width: 100%;
 }
-.main-production {
-    margin-top: 50vh;
-    width: 100%;
-}
+
 .circle {
     height: 9rem;
    
@@ -170,35 +165,70 @@ height: 10px;
 }
 .owl-carousel .item img{
     height: 30rem;
-    width: 50%;
+    width: 90%;
 }
 .info {
     background-image: url(../img/Vector\ 8.png);
-    background-repeat: no-repeat;
     background-size: cover;
-    height: 127vh;
-    width: 100%;
+    height: 1000px;
+    margin-top: -100px;
+    margin-bottom: -100px;
 }
-.info-text {
-    margin-top: 15rem;
+.production-wrapper {
+    height: 400px;
 }
-.info-group {
-    margin-top: 15rem;
+.grid-container {
+    display: grid;
+    grid-template-areas:
+        "left top-left top-right"
+        "left bottom bottom";
+    grid-template-rows: 250px 250px;
+    grid-template-columns: 250px 250px 250px;
+    gap: 20px;
 }
-.wrapper-content {
-    width: 100%;
-    margin-top: 15rem;
+
+.grid-container div {
+    border: 1px solid gold;
+    padding: 20px;
+    color: white;
+    font-size: 24pt;
 }
-.wrapper-content-img img {
-    width: 635px;
-    height: 170px;
+
+
+#left {
+    grid-area: left;
+    background: url('../img/Group 82.png');
+    background-size: cover;
 }
-.btn-info-buy {
-   border-color: #47093E;
-   border-radius: 20px;
-   width: 10%;
-   margin-right: 10%;
-   background-color: transparent;
+
+#top-left {
+    grid-area: top-left;
+    background: url('../img/Group 83.png');
+    background-size: cover;
+}
+
+#top-right {
+    grid-area: top-right;
+    background: url('../img/Group 84.png');
+    background-size: cover;
+}
+
+#bottom {
+    grid-area: bottom;
+    background: url('../img/Group 85.png');
+    background-size: cover;
+}
+
+.btn-round {
+    height: 40px;
+    line-height: 0;
+    padding: 20px;
+    border-radius: 20px;
+    margin-right: 220px;
+}
+.btn-pink {
+    color: black;
+    border: 1px solid black;
 }
 .buttons {
     margin-right: 149px;
@@ -232,18 +262,73 @@ background-color: #47093E;
 color: #E5E5E5;
 }
 .footer-wrapper{
-    
+    box-shadow: 0 -10px 20px -5px rgba(115,115,115,0.75);
     width: 100%;
     overflow: hidden;
 }
 .head-footer h1 {
     width: 31px;
 }
-.footer-social img {
-color: #7A7A7A;
-}
-@media (max-width: 568px) {
 
+.wrapper-content img {
+    gap: 10px;
+}
+.text-center {
+    margin-top: 150px;
+}
+
+.item::before {
+    content: "";
+    background: url(../img/btn_play.png);
+    background-size: cover;
+    position: absolute;
+    width: 100px;
+    height: 100px;
+    top: calc(50% - 50px);
+    left: calc(50% - 50px);
+}
+
+.item::hover {
+    opacity: .8;
+}
+.owl-theme .owl-dots {
+    text-align: left;
+}
+.footer-wrapper {
+    box-shadow: -5px -5px 15px #47093E;
+    -webkit-box-shadow: -5px -5px 15px #47093E;
+    box-shadow: -5px -5px 15px #47093E;;
+}
+
+@media (max-width: 568px) {
+    .line {
+        display: none;
+    }
+    .p-2 {
+        display: none;
+    }
+    .production-wrapper {
+        display: none;
+    }
+    .production {
+        display: none;
+    }
+    .production {
+        background: none;
+    }
+    .specialists {
+        display: none;
+    }
+    .info {
+        display: none;
+    }
+    .info {
+        background: none;
+    }
+    
+    .footer {
+        display: none;
+    }
     .navbar-brand {
         width: 100%;
     }
@@ -279,37 +364,19 @@ color: #7A7A7A;
         color: #47093E;
         border-color: #5B0E58;
     }
-    .visually-hidden:hover {
-        color: #47093E;
-        border-color: #5B0E58;
-    }
-    .text-left {
-        text-align: center;
-        font-size: 47px;
-    }
-    .text-left h2 {
-        font-size: 47px;
-    }
-    .line {
-        display: none;
-    }
-    .p-2 {
-        display: none;
-    }
-   .production {
-    display: none;
-   }
-   .info {
-    display: none;
-   }
-   .footer {
-    display: none;
-   }
+    
    .menu-list {
     z-index: 100;
    }
    .carousel-wrapper {
     min-height: 300px;
+}
+.grid-container {
+    grid-template-rows: 50vh 50vh;
+    grid-template-columns: 30vw 30vw 30vw;
+}
+.grid-container div {
+    font-size: 1rem;
 }
 }
 
